[package]
name = "tok-pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo = { version = "1.1.2", package = "turbo-genesis-sdk", features = ["solana"]}
solana-sdk = "1.9.1"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "0.2.83"
sha2 = "0.10.8"
serde = "1.0.214"
ethers-web = "0.2.1"

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
cc = { git = "https://github.com/jozanza/cc-rs.git", branch = "wasm-patch" }
